--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,37 @@
 /TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.csprojAssemblyReference.cache
 /TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.csprojAssemblyReference.cache
 /TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/Page1.xaml.g.cs
+/TryApp/.vs/TryApp/v16/.suo
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/App.xbf
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/AppX/App.xbf
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/AppX/entrypoint/TryApp.UWP.exe
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/AppX/MainPage.xbf
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/AppX/Microsoft.UI.Xaml/DensityStyles/Compact.xbf
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/AppX/TryApp.dll
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/AppX/vs.appxrecipe
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/MainPage.xbf
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/Microsoft.UI.Xaml/DensityStyles/Compact.xbf
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/TryApp.dll
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/TryApp.pdb
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/TryApp.UWP.exe
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/TryApp.UWP.pdb
+/TryApp/TryApp/TryApp.UWP/obj/x86/Debug/App.xbf
+/TryApp/TryApp/TryApp.UWP/obj/x86/Debug/intermediatexaml/TryApp.UWP.exe
+/TryApp/TryApp/TryApp.UWP/obj/x86/Debug/intermediatexaml/TryApp.UWP.pdb
+/TryApp/TryApp/TryApp.UWP/obj/x86/Debug/MainPage.xbf
+/TryApp/TryApp/TryApp.UWP/obj/x86/Debug/Microsoft.UI.Xaml/DensityStyles/Compact.xbf
+/TryApp/TryApp/TryApp.UWP/obj/x86/Debug/ResourceHandlingTask.state
+/TryApp/TryApp/TryApp.UWP/obj/x86/Debug/TryApp.UWP.csprojAssemblyReference.cache
+/TryApp/TryApp/TryApp.UWP/obj/x86/Debug/TryApp.UWP.exe
+/TryApp/TryApp/TryApp.UWP/obj/x86/Debug/TryApp.UWP.pdb
+/TryApp/TryApp/TryApp.UWP/obj/x86/Debug/XamlSaveStateFile.xml
+/TryApp/TryApp/TryApp/bin/Debug/netstandard2.0/ref/TryApp.dll
+/TryApp/TryApp/TryApp/bin/Debug/netstandard2.0/TryApp.dll
+/TryApp/TryApp/TryApp/bin/Debug/netstandard2.0/TryApp.pdb
+/TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/ref/TryApp.dll
+/TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.csproj.CoreCompileInputs.cache
+/TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.csproj.FileListAbsolute.txt
+/TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.csprojAssemblyReference.cache
+/TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.dll
+/TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.pdb
+/TryApp/TryApp/TryApp/TryApp.csproj
