--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,19 @@
 /TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.dll
 /TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.pdb
 /TryApp/TryApp/TryApp/TryApp.csproj
+/TryApp/.vs/TryApp/v16/.suo
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/AppX/TryApp.dll
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/AppX/vs.appxrecipe
+/TryApp/TryApp/TryApp/bin/Debug/netstandard2.0/TryApp.dll
+/TryApp/TryApp/TryApp/bin/Debug/netstandard2.0/TryApp.pdb
+/TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.csprojAssemblyReference.cache
+/TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.dll
+/TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.pdb
+/TryApp/.vs/TryApp/v16/.suo
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/AppX/TryApp.dll
+/TryApp/TryApp/TryApp.UWP/bin/x86/Debug/AppX/vs.appxrecipe
+/TryApp/TryApp/TryApp/bin/Debug/netstandard2.0/TryApp.dll
+/TryApp/TryApp/TryApp/bin/Debug/netstandard2.0/TryApp.pdb
+/TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.csprojAssemblyReference.cache
+/TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.dll
+/TryApp/TryApp/TryApp/obj/Debug/netstandard2.0/TryApp.pdb
