--- a/PracAyushApp/PracAyushApp/PracAyushApp.UWP/PracAyushApp.UWP.csproj
+++ b/PracAyushApp/PracAyushApp/PracAyushApp.UWP/PracAyushApp.UWP.csproj
@@ -152,6 +152,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.6.292</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.657" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.10" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.1" />
